--- a/1.html
+++ b/1.html
@@ -7,7 +7,12 @@
 
 <body>
   <h1><a href="index.html">IU</a></h1>
-    <h2>아이와 나의 바다</h2>
+      <h2>아이와 나의 바다</h2>
+  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/TqIAndOnd74"
+  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+  clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe></p>
+
     <p>그러나 시간이 지나도<br>
     아물지 않는 일들이 있지<br>
     내가 날 온전히 사랑하지 못해서<br>
@@ -53,6 +58,5 @@
     <p>그럼에도 여전히 가끔은<br>
     삶에게 지는 날들도 있겠지<br>
     또다시 헤매일지라도 돌아오는 길을 알아</p>
-  <img src="beach.jpg" width="50%">
 </body>
 </html>
