--- a/index.html
+++ b/index.html
@@ -15,5 +15,27 @@
   <h2>IU</h2>
   <p>본명은 이지은이며, 예명 아이유(IU)는 <strong>"음악으로 너와 내가 하나가 된다"</strong>라는 뜻을 가지고 있다.<br>
     매력적인 음색과 뛰어난 작사·작곡 능력을 바탕으로 아이돌과 아티스트로서 꾸준히 정상의 인기를 누리고 있다.</p>
+
+
+<p><div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-iu.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
+
 </body>
 </html>
