--- a/2.html
+++ b/2.html
@@ -3,16 +3,24 @@
 <head>
   <title>IU - 싫은 날</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">IU</a></h1>
-    <h1>싫은 날</h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" title="아이와 나의 바다 가사">아이와 나의 바다</a></li>
+      <li><a href="2.html" title="싫은 날 가사">싫은 날</a></li>
+      <li><a href="3.html" title="에필로그 가사">에필로그</a></li>
+    </ol>
+
+  <div id="lyrics">
+  <h2>싫은 날</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Tqudgg0aBAI"
   title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
   clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen></iframe>
-
   <p>키 큰 전봇대 조명 아래<br>
   나 혼자 집에 돌아가는 길<br>
   가기 싫다 쓸쓸한 대사 한 마디 umm</p>
@@ -39,5 +47,8 @@
   Na na na na na</p>
   <p>내 방 고드름도 녹을까<br>
   햇볕 드는 좋은 날 오면은</p>
+  </div>
+
+</div>
 </body>
 </html>
