--- a/3.html
+++ b/3.html
@@ -3,11 +3,21 @@
 <head>
   <title>IU - 에필로그</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">IU</a></h1>
-    <h1>에필로그</h1>
+
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" title="아이와 나의 바다 가사">아이와 나의 바다</a></li>
+      <li><a href="2.html" title="싫은 날 가사">싫은 날</a></li>
+      <li><a href="3.html" title="에필로그 가사">에필로그</a></li>
+    </ol>
+
+  <div id="lyrics">
+  <h2>에필로그</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/c9E2IT1jHQY"
   title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
   clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -41,5 +51,7 @@
   깊은 잠에 들어요<br>
   어떤 꿈을 꿨는지 들려줄 날 오겠지요<br>
   들어줄 거지요?</p>
+</div>
+</div>
 </body>
 </html>
