--- a/index.html
+++ b/index.html
@@ -3,19 +3,34 @@
 <head>
   <title>IU</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
   <h1><a href="index.html">IU</a></h1>
+<div id="grid">
   <ol>
-    <li><a href="1.html" title="아이와 나의 바다 가사">아이와 나의 바다</a></li>
-    <li><a href="2.html" title="싫은 날 가사">싫은 날</a></li>
+    <li><a href="1.html" title="아이와 나의 바다 가사" class="saw">아이와 나의 바다</a></li>
+    <li><a href="2.html" title="싫은 날 가사" class="saw" id="active">싫은 날</a></li>
     <li><a href="3.html" title="에필로그 가사">에필로그</a></li>
   </ol>
-  <h2>IU</h2>
-  <p>본명은 이지은이며, 예명 아이유(IU)는 <strong>"음악으로 너와 내가 하나가 된다"</strong>라는 뜻을 가지고 있다.<br>
-    매력적인 음색과 뛰어난 작사·작곡 능력을 바탕으로 아이돌과 아티스트로서 꾸준히 정상의 인기를 누리고 있다.</p>
 
+  <div id="lyrics">
+  <h2>IU</h2>
+  <p>본명은 이지은이며, 예명 아이유(<a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EC%9C%A0">IU</a>)는 <strong>"음악으로 너와 내가 하나가 된다"</strong>라는 뜻을 가지고 있다.
+    매력적인 음색과 뛰어난 작사·작곡 능력을 바탕으로 아이돌과 아티스트로서 꾸준히 정상의 인기를 누리고 있다.
+    2010년 이래 발매한 모든 노래들이 차트 최상위권에 랭크되었다. 10대 시절부터 도전한 다양한 장르의 음악들 중에는 <잔소리>와 <좋은 날>, <너랑 나>처럼
+    가창력과 소녀스러움을 함께 선보인 곡들이 대중에게 특히 어필되며 국민적 신드롬을 일으켰고,
+    싱어송라이터로서의 출발을 알린 자작곡 <내 손을 잡아>, <금요일에 만나요>와
+    세대를 초월하여 폭넓은 리스너층을 확보한 리메이크 앨범 꽃갈피의 수록곡 <너의 의미>,
+    그리고 본격적으로 프로듀싱을 하기 시작한 앨범 CHAT-SHIRE를 기점으로 자신만의 음악을 하는 아티스트로 전향하는 데에 성공함으로써 롱런의 기반을 마련했다.
+    그 후 앨범 프로듀싱과 거의 모든 곡의 작사를 자신이 직접 하면서 <레옹>, <밤편지>, <팔레트>, <삐삐>, <Love poem>, <Blueming>, <에잇>,
+    <Celebrity>, <라일락>, <strawberry moon> 등 발매하는 곡들마다 히트곡으로 만들어내며 싱어송라이터로서도 승승장구하고 있다.
+    이렇게 10년이 넘는 시간 동안 굳건히 가요계의 최정상을 지키며 사랑받고 있는데,
+    이 과정들 속에서 매우 다양한 장르를 소화해내는 역량이 입증되었다는 평가 또한 받는다.</p>
+  </div>
+</div>
 
 <p><div id="disqus_thread"></div>
 <script>
